# VkPlayground

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  init.sh  run.sh  todo.md
Scripts/: Build.lua  DefaultFragData.lua  HeaderDDS.lua  MeshMaterialExtractor.lua  RunScrapper.lua  ShaderInputParser.lua  TextureBuilder.lua  TypesGLSL.lua  UtilFuncs.lua  better_git_log.sh  compilefile.sh  complex.lua  debug_gdb.sh  format_code_style.sh  gdb_cmds.txt  matrix.lua  run.lua  test_matrix.lua
Tools/: CompressonatorCLI_linux01.7z  CompressonatorCLI_linux02.7z  CompressonatorCLI_linux03.7z  CompressonatorCLI_linux04.7z
backtrace/: CMakeLists.txt
lua_53/: CMakeLists.txt
src/: Config.h.in  main.cpp
src/Shaders/: BasicMesh.frag  BasicMesh.vert
src/Templates/: DescriptorPoolTemplate.inl  SpirvTemplate.inl
src/VK/: TypesGLSL.inl
